<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">



    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_title_Profile"
        android:key="@string/key_profile_name"
        android:summary="@string/pref_title_Profile"
        android:title="@string/pref_title_Profile"/>
    <EditTextPreference
        android:defaultValue="@string/pref_title_Email"
        android:key="@string/key_Email"
        android:summary="@string/pref_title_Email"
        android:title="@string/pref_title_Email"/>
    <EditTextPreference
        android:defaultValue="@string/pref_title_Skills"
        android:key="@string/key_Skills"
        android:summary="@string/pref_title_Skills"
        android:title="@string/pref_title_Skills"/>

    <SwitchPreference
        android:defaultValue="true"
        android:key="example_switch"
        android:summary="@string/pref_title_Mobile_no_privacy"
        android:title="@string/pref_title_Mobile_no_privacy" />
    <EditTextPreference
        android:defaultValue="@string/pref_title_Work"
        android:key="@string/key_Work"
        android:summary="@string/pref_title_Work"
        android:title="@string/pref_title_Work"/>
    <EditTextPreference
        android:defaultValue="@string/pref_title_ChangePassword"
        android:key="@string/key_PasswordChange"
        android:summary="@string/pref_title_ChangePassword"
        android:title="@string/pref_title_ChangePassword"/>

</PreferenceScreen>
